# vmod-fileserver

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: lib.rs
tests/: test07.vtc
