[package]
name = "vmod_fileserver"
version = "0.0.11"
rust-version = "1.90.0"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[dependencies]
chrono = "0.4.45"
varnish = { version = "0.7.0", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
